# aniso-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: baseline_critical.yaml  basic_2d.yaml  benchmark_2d.yaml  chain_demo.yaml  grid_demo.yaml  grid_sweep.yaml  grid_sweep2d.yaml  overnight_adaptive_critical.yaml  overnight_disruption_map.yaml  overnight_landau.yaml  overnight_pulsed_critical.yaml  overnight_thermal_runaway.yaml  phase_transition.yaml  scalar_limit.yaml  sweep_DE_diss.yaml  sweep_crit2.yaml  sweep_crit3.yaml  sweep_crit4.yaml  sweep_crit5.yaml  sweep_crit_fast.yaml  sweep_critical.yaml  sweep_critical_find.yaml  sweep_gain_alpha.yaml  sweep_gain_diss.yaml  sweep_gain_diss2.yaml  sweep_gain_noise.yaml  sweep_heater_adaptive.yaml  sweep_heater_event.yaml  sweep_heater_event_hot.yaml  sweep_heater_global.yaml  sweep_heater_pulsed.yaml  sweep_heater_pulsed_hot.yaml  sweep_hmode.yaml  sweep_power_diss.yaml  sweep_power_diss_hard.yaml  sweep_power_diss_lim.yaml  sweep_power_diss_unstable.yaml  sweep_power_eta.yaml  sweep_power_eta_hard.yaml  sweep_power_gain.yaml  (+5 more)
include/aniso/: benchmark.hpp  chain.hpp  config.hpp  controller.hpp  coupling.hpp  engine.hpp  feedback.hpp  g_response.hpp  grid.hpp  grid_benchmark.hpp  heater.hpp  interaction.hpp  observer.hpp  recorder.hpp  resolution.hpp  types.hpp
scripts/: analyze_1d.py  analyze_diff.py  plot_atlas.py  plot_critical.py  plot_heater.py  plot_heater_all.py  plot_heating.py  plot_l0_sweep.py  plot_overnight.py  plot_phase.py  plot_sweep.py
src/: gui_main.cpp  main.cpp
tests/: test_scalar_limit.cpp
